fix background image, no repeats, covers whole screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
   /* background-color: #a2d5d5; */
-  background-image: url("../images/sockBackground.png");
+  background-image: url("../images/sockBackground-01.png");
   background-size: cover;
+  background-repeat: no-repeat;
   font-family: "Gaegu", sans-serif;
   font-size: 1.3em;
   text-align: center;
